--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'F106'
 - !lcsh 'Floods -- New Jersey -- Passaic River Valley'
+- GITenberg
 title: The Passaic Flood of 1903
 url: http://www.gutenberg.org/ebooks/19878
